tests/snapshots/owner_signature__bob_data.snap
---
source: tests/owner_signature.rs
assertion_line: 93
expression: bob_data
snapshot_kind: text
---
message: test record write
